--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>About - ERS</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link href='http://fonts.googleapis.com/css?family=Titillium+Web:900|Merriweather:300,300italic,700' rel='stylesheet' type='text/css'>-->
+        <!--<link href='http://fonts.googleapis.com/css?family=Montserrat:700|Bitter:400,400italic' rel='stylesheet' type='text/css'>-->
         <link rel="stylesheet" href="css/main.css">
     </head>
     
